# glimpse

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PKGBUILD  build.rs  flake.nix  languages.yml  readme.md  registry.toml
.github/workflows/: release.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/: analyzer.rs  cli.rs  main.rs  output.rs
crates/code/: Cargo.toml
crates/code/src/: compile.rs  extract.rs  grammar.rs  graph.rs  heuristics.rs  imports.rs  index.rs  lib.rs  loader.rs  queries.rs  registry.rs  resolve.rs  schema.rs  storage.rs  workspace.rs
crates/code/tests/: extraction.rs  integration.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: config.rs  lib.rs  tokenizer.rs  types.rs
crates/fetch/: Cargo.toml
crates/fetch/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: file_picker.rs
src/: analyzer.rs  cli.rs  config.rs  file_picker.rs  git_processor.rs  lib.rs  main.rs  output.rs  patterns.rs  progress.rs  source_detection.rs  tokenizer.rs  url_processor.rs
src/code/: extract.rs  grammar.rs  graph.rs  index.rs  lsp.rs  mod.rs  resolve.rs
src/core/: config.rs  mod.rs  source_detection.rs  tokenizer.rs  types.rs
src/fetch/: git.rs  url.rs
src/tui/: mod.rs
test_project/src/: lib.rs  main.rs
tests/: extraction.rs  integration.rs  lsp_integration.rs
