[package]
name = "glimpse"
version = "0.5.2"
edition = "2021"
description = "A blazingly fast tool for peeking at codebases. Perfect for loading your codebase into an LLM's context."
license = "MIT"

[dependencies]
anyhow = "1.0.95"
arboard = "3.4.1"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
dirs = "5.0.1"
globset = "0.4.15"
ignore = "0.4.23"
indicatif = "0.17.9"
once_cell = "1.20.2"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
tempfile = "3.14.0"
tiktoken-rs = "0.6.0"
tokenizers = { version = "0.21.0", features = ["http"] }
toml = "0.8.19"
walkdir = "2.5.0"
