[workspace]
resolver = "2"
members = [
	"crates/cli",
	"crates/code",
	"crates/core",
	"crates/fetch",
	"crates/tui"
]

[workspace.package]
version = "0.7.8"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
glimpse-code = { path = "crates/code" }
glimpse-core = { path = "crates/core" }
glimpse-fetch = { path = "crates/fetch" }
glimpse-tui = { path = "crates/tui" }

# Common dependencies
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
rayon = "1.10.0"

# Code analysis dependencies
bincode = "1.3"
cc = "1.2"
libloading = "0.8"
tree-sitter = "0.24"

# Core dependencies
dirs = "5.0.1"
once_cell = "1.20.2"
tempfile = "3.14.0"
tiktoken-rs = "0.6.0"
tokenizers = { version = "0.21.0", features = ["http"] }
toml = "0.8.19"

# Fetch dependencies
arboard = { version = "3.4.1", features = ["wayland-data-control"] }
git2 = "0.18"
indicatif = "0.17.9"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.18"
url = "2.5"

# TUI dependencies
base64 = "0.22.1"
crossterm = "0.28.1"
ignore = "0.4.23"
num-format = { version = "0.4.4" }
printpdf = "0.7.0"
ratatui = "0.29.0"

# CLI dependencies
clap = { version = "4.5.23", features = ["derive"] }

# Test dependencies
mockito = "1.4"
walkdir = "2.5.0"
which = "8.0.0"
