[package]
name = "glimpse"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A blazingly fast tool for peeking at codebases"

[[bin]]
name = "glimpse"
path = "src/main.rs"

[dependencies]
glimpse-core.workspace = true
glimpse-fetch.workspace = true
glimpse-tui.workspace = true

anyhow.workspace = true
arboard.workspace = true
base64.workspace = true
clap.workspace = true
ignore.workspace = true
indicatif.workspace = true
num-format.workspace = true
printpdf.workspace = true
rayon.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
