[package]
name = "glimpse-code"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
cc.workspace = true
dirs.workspace = true
git2.workspace = true
libloading.workspace = true
once_cell.workspace = true
serde.workspace = true
tempfile.workspace = true
toml.workspace = true
tree-sitter.workspace = true
walkdir.workspace = true

glimpse-core.workspace = true
glimpse-fetch.workspace = true

[dev-dependencies]
tempfile.workspace = true
