[package]
name = "glimpse-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glimpse-core.workspace = true

anyhow.workspace = true
arboard.workspace = true
base64.workspace = true
crossterm.workspace = true
ignore.workspace = true
num-format.workspace = true
printpdf.workspace = true
ratatui.workspace = true
